Fix noUiSlider on mobile
Materialize one isn't playing nice, put in a slightly modified version
of the stock noUiSlider (made to show tooltips only when you click the
handle).

fixes #20

--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -52,7 +52,7 @@
   }
 
   #amount-yielded-slider {
-    margin: 1.5rem 0;
+    margin: 1.5rem 1rem;
   }
 
   .types {
